# anything-extractor

./: .env.example  .gitignore  README.md  alembic.ini  claude_plan.md  pyproject.toml  spec.md  spec_draft.md
dev_log/: 2026-02-22.md
migrations/: env.py
migrations/versions/: 001_initial.py
src/ae/: __init__.py  cli.py  config.py  db.py  llm.py  models.py  pdf.py
src/ae/builder/: analyzer.py  bootstrap.py  codegen.py  git_ops.py  pattern_lib.py  schema_mgr.py
src/ae/observer/: feedback.py  judge.py  sampler.py  trigger.py
src/ae/shared/: prompts.py  types.py  utils.py
src/ae/worker/: confidence.py  postprocess.py  runner.py
